<resources>
    <string name="app_name">XuanCuongStationery</string>
    <string name="lbHome">Home</string>
    <string name="lbRevenue">Revenue</string>
    <string name="lbBill">Bill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lbProductTitle">Product</string>
    <string name="lbImportTitle">Import</string>
    <string name="lbCategoryTitle">Category</string>
    <string name="lbSupplierTitle">Supplier</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbViewDetail"><u>View Detail</u></string>
    <string name="lbCardNotice">Tap to open</string>
    <string name="lbStatName">Xuan Cuong</string>
    <string name="lbContextDel">Delete</string>
    <string name="lbContextUpdate">Update</string>
    <string name="lbContextView">View more</string>
    <string name="lbSelectExists">Is Available?</string>
    <string name="lbCategoryDropdown">Select Category</string>
    <string name="lbProductDropdown">Select Product</string>
    <string name="lbHintQuantity">Quantity</string>
    <string name="lbRequire">Required</string>
    <string name="lbImportExistingSave">Save</string>
    <string name="lbHintPriceImport">Price Import</string>
    <string name="lbHintPriceSell">Price Sell</string>
    <string name="lbProviderDropdown">Supplier</string>
    <string name="lbHintProductName">Product Name</string>
    <string name="lbChooseImgText">Click to chose image</string>
    <string name="lbCategoryAdd">Add New Category</string>
    <string name="lbNoticeCategoryAdd">Category Name</string>
    <string name="lbCloseDialog">Close</string>
    <string name="lbAddDialog">Add</string>
    <string name="lbProviderAdd">Add New Provider</string>
    <string name="lbNoticeProviderAdd">Provider Name</string>
    <string name="lbProviderEdit">Edit Provider Information</string>
    <string name="lbEditDialog">Edit</string>
    <string name="lbWaitingList">Waiting List</string>
    <string name="lbKindOfWaitingList">Import or Sell?</string>
    <string name="lbImportProductTitle">Import Product</string>
    <string name="lbContextProductSell">Add To Sell List</string>
    <string name="lbProductEdit">Edit Product Information</string>
    <string name="lbImportPrice">Import Price</string>
    <string name="lbSellPrice">Sell Price</string>
    <string name="lbShowBill">Which Bill?</string>
    <string name="lbBillId">Bill ID</string>
    <string name="lbBillDate">Date</string>
    <string name="lbBillTotal">Total</string>
</resources>