<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@drawable/bg_white_corner_16"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_deep_sky_corner_16_top_left_top_right"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/lbCategoryAdd"
        android:textColor="@color/chartreuse"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgCategoryAddChoose"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/book" />

        <EditText
            android:id="@+id/edtCategoryNameAdd"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/bg_gray_corner_10"
            android:hint="@string/lbNoticeCategoryAdd"
            android:paddingStart="8dp"
            android:paddingEnd="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:alpha="0.5"
            android:text="@string/lbChooseImgText"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCloseCategoryAddDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="12dp"
                android:layout_weight="1"
                android:alpha="0.8"
                android:backgroundTint="@color/crimson"
                android:text="@string/lbCloseDialog"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnAddCategoryDialog"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.8"
                android:backgroundTint="@color/lime_green"
                android:text="@string/lbAddDialog"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>